src/styles/form.css
form {
  /* border: 1px solid rgb(185, 185, 185); */
  border-radius: 6px;
  padding: 8px;
  display: flex;
  flex-direction: column;
  gap: 8px;
  background-color: #edf2f4;
}

.main-input-container input {
  width: 100%;
  max-width: 100%;
  padding: 8px;
  font-size: 18px;
  border: 1px solid rgb(185, 185, 185);
  border-radius: 6px;
}

.controls {
  display: flex;
  justify-content: space-between;
}

.secondary-input-container {
  display: flex;
  gap: 8px;
}

.secondary-input-container label {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.secondary-input-container label > input,
.secondary-input-container label > select {
  padding: 0.1rem;
  text-align: center;
  border: 1px solid rgb(185, 185, 185);
  border-radius: 6px;
  height: 24px;
}

.controls .btn-container {
  display: flex;
  align-items: flex-end;
  gap: 8px;
}

.controls .btn-container button {
  min-width: 82px;
  height: 36px;
  padding: 0 8px;
  background-color: rgb(74, 114, 227);
  color: white;
  border: none;
  border-radius: 6px;
}

.controls .btn-container button:disabled {
  background-color: rgb(172, 172, 173);
  color: white;
}

.controls .btn-container button.cancel {
  background-color: rgb(215, 66, 113);
}

